# my-full-stack-fastapi-template

./: .env  .gitignore  .pre-commit-config.yaml  .ruff.toml  MAKEFILE.md  Makefile  README.md  add_docker_to_path.bat  add_docker_to_path.ps1  make.bat  my-full-stack-fastapi-template.code-workspace  repomix-output.md  repomix-output.txt  repomix.txt
backend/: check_postgres.py  pyproject.toml
backend/app/: main.py  models.py
backend/app/api/: deps.py
backend/app/core/: config.py  db.py  security.py
backend/app/core/logging/: README.md  __init__.py  logging.py
backend/app/examples/: logging_example.py  run_logging_example.py
backend/app/tests/: conftest.py
backend/app/tests/core/: test_logging.py
backend/docs/source/_generated_uml/: 1a31ce608336_add_cascade_delete_relationships.puml  9c0a54914c78_add_max_length_for_string_varchar_.puml  config.puml  conftest.puml  deps.puml  e2412789c190_initialize_models.puml  env.puml  items.puml  main.puml  private.puml  security.puml  test_items.puml  test_logging.puml  test_users.puml  tests_pre_start.puml  user.puml  users.puml  utils.puml
backend/scripts/: format.sh  lint.sh
backend/scripts/utils/: README.md  generate_uml.py  verify_uml_paths.py  verify_uml_setup.py
utils/: README.md  __init__.py  extract_activity.py  extract_app_sequences.py  extract_class.py  extract_sequence.py  extract_state.py  install_dev.py  pyproject.toml  run_uml.py  run_uml_generator.py  setup_venv.py
utils/examples/: README.md  generate_uml_diagram.py  uml_structure.puml
utils/pipeline/: .repomixignore  ENHANCEMENTS_README.md  ENHANCEMENT_CHECKLIST.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_PLAN.md  ISSUE_FIXES.md  NOTES.md  PIPELINE_USAGE.md  README.md  SCHEMA_VISUALIZATION.md  SYSTEM_DIAGRAMS.md  VERIFICATION_PLAN.md  pipeline.py  pipeline_test.bat  pipeline_test.ps1  pyproject.toml  pytest.ini  repomix-output.md  repomix-output.txt  repomix.config.json  requirements-dev.txt  run_pipeline.py  run_tests.py  visualize_schema.py
utils/pipeline/analyzer/: __init__.py  pdf.py
utils/pipeline/cleaner/: __init__.py  pdf.py
utils/pipeline/config/: CONFIG_FILES.md  README.md  __init__.py  config.py  enhanced_markdown_config.json  enhanced_markdown_config_v2.json  example_classifier_config.yaml  example_config.yaml  hvac_classifier_config.yaml  hvac_config.json  hvac_config.yaml  manager.py  reference_classifier_config.yaml  reference_config.yaml  schema_registry.yaml
utils/pipeline/config/document_types/: invoice.yaml
utils/pipeline/core/: file_processor.py
utils/pipeline/docs/: CLASSIFICATION_FIX.md  NOTES.md  PIPELINE_USAGE.md  SCHEMA_VISUALIZATION.md  class_diagram.puml  component_diagrams.md  configuration_enhancement_checklist.md  configuration_enhancement_summary.md  configuration_migration.md  configuration_system.md  enhanced_markdown.md  er_diagram.puml  pdf-extraction-implementation-plan.md  pipeline-plan.md  pipeline_c4_diagram.puml  pipeline_diagram.puml  schema_migration.md  testing_sop.md
utils/pipeline/examples/: __init__.py  config.yaml  config_validation_example.py  document_classification_example.py  pdf_extraction_example.py  runtime_updates_example.py  schema_analysis_example.py  schema_registry_example.py  test_sample_pdf.py
utils/pipeline/models/: models.py
utils/pipeline/processors/: document_classifier.py  pdf_extractor.py  pdf_formatter.py  pdf_validator.py
utils/pipeline/schema/: __init__.py  analyzer.py  enhanced_registry.py  extended_registry.py  matchers.py  migrator.py  registry.py  vectorizer.py  visualizer.py
utils/pipeline/scripts/: rename_input_files.py  run_config_tests.py  setup_pytest_env.py  test_config_system.py
utils/pipeline/strategies/: __init__.py  base.py  classifier_factory.py  classifier_strategy.py  ensemble_manager.py  formatter.py
utils/pipeline/tests/: README.md  __init__.py  conftest.py  test_classification_fix.py  test_config.py  test_config_integration.py  test_config_manager.py  test_e2e_classification.py  test_logging.py  test_models.py  test_pipeline.py  test_pipeline_logging.py  test_schema_storage.py  test_table_detection.py
utils/pipeline/utils/: logging.py  progress.py
utils/pipeline/verify/: base.py  factory.py  json_tree.py  markdown.py
utils/puml/: Makefile  README.md  __init__.py  analyzer.py  api.py  cli.py  code_analyzer.py  config.py  core.py  diagram_generator.py  exceptions.py  index.html  models.py  render_diagrams.py  repomix-output.txt  requirements.txt  settings.py  test_code_analyzer.py  test_puml.py
utils/puml/docs/: README.md  plantuml-utilities.md
utils/puml/tests/: __init__.py  test_code_analyzer.py  test_puml.py
utils/puml/viewer/: index.html
utils/sequence_extractor/: analyzer.py  generator.py  models.py  test_sequence_diagrams.sh
utils/uml/: README.md  REVIEW.md  __init__.py  factories.py  pyproject.toml  run.py
utils/uml/cli/: __init__.py  extract_activity.py  extract_app_sequences.py  extract_class.py  extract_sequence.py  extract_state.py  run_uml_generator.py  uml_cli.py
utils/uml/config/: __init__.py
utils/uml/core/: __init__.py  exceptions.py  filesystem.py  interfaces.py  service.py
utils/uml/diagrams/: __init__.py  base.py
utils/uml/scripts/: cleanup_old_code.py  setup_venv.py
utils/uml/utils/: __init__.py  paths.py
utils/uml_generator/: __init__.py  cli.py  config.py  exceptions.py  factories.py  filesystem.py  interfaces.py  models.py  path_resolver.py  pytest.ini  repomix-output.txt  requirements-dev.txt  service.py
utils/uml_generator/config/: defaults.toml  loader.py
utils/uml_generator/generator/: __init__.py  plantuml_generator.py
utils/uml_generator/models/: __init__.py  sequence.py
utils/uml_generator/parsers/: __init__.py  python_parser.py
utils/uml_generator/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_generator.py  test_integration.py  test_models.py  test_parser.py  test_sequence_generator.py
z_archive/uml_old_20250314_112501/uml_generator/: README.md  cli.py  interfaces.py  models.py  pyproject.toml  requirements-dev.txt  service.py  test_uml_gen.py
(+607 files in other folders)
