[project]
name = "pipeline"
version = "0.1.0"
description = "Document processing pipeline"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "pypdf>=4.0.1",
    "python-docx>=1.1.0",
    "PyMuPDF>=1.23.8",  # fitz
    "camelot-py[cv]>=0.11.0",  # table extraction
    "opencv-python-headless>=4.9.0.80",  # for camelot
    "ghostscript>=0.7",  # for camelot
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
